@@ -1,1 +1,0 @@
-com.sun.jersey.impl.VariantListBuilderImpl
