@@ -1,4 +1,8 @@
 release 1.0.1 (2008-11/12)
+- Fixed issue 140
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=140
+  The full functionality of the client API can be used independently of the
+  server side and requires no dependency on server-based artificats.
 - Fixed and improved support for the selection of the most acceptable media type
   used for the content type when the application declares @Produces on a class
   or a resource method.
